# selim

./: Cargo.toml  README.md  default.nix
src/: abc.rs  algo01_homophonopedantic.rs  algo02_polyphonoflex.rs  cleanup.rs  cmdline.rs  device.rs  lib.rs  main.rs  playback.rs  score.rs  test_helpers.rs
test-asset/: three-quarters.abc  three-quarters.mid
