[package]
name = "selim"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
assert_approx_eq = "1.1.0"
midi-reader-writer = { version = "0.1.0", features = ["engine-midly-0-5"] }
midir = "0.7.0"
midly = "0.5"
nodi = "0.13.2"
once_cell = "1.9.0"
structopt = "0.3.25"

[dev-dependencies]
rstest = "0.12.0"
